Enhances job processing and agent routing
Upgrades gRPC dependencies to 1.80 for compatibility improvements.
Switches to using virtual threads for better concurrency in job processing.
Refines API routes to adhere to more consistent HTTP methods.
Enhances call handling logic for normalization and accuracy.
Updates DTOs for improved clarity and data integrity.
Relates to ongoing improvements in core functionality.